Update button text to 'Send Message'

--- a/postmessage.html
+++ b/postmessage.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div class="container">
-        <button id="sendMessageBtn">Send Message to Parent</button>
+        <button id="sendMessageBtn">Send Message</button>
         <div id="messageDisplay"></div>
     </div>
 
